--- a/css/parkings.css
+++ b/css/parkings.css
@@ -1,6 +1,7 @@
 body {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 	font-size: 12px;
+	line-height: 15px;
 	color: #ccc;
 	background: #000;
 	margin: 20px;
@@ -14,7 +15,7 @@ section {
 #container {
 	position: relative;
 	width: 300px;
-	height: 600px;
+	height: 598px;
 	margin: 0 auto;
 	-webkit-perspective: 800px;
 	-moz-perspective: 800px;
@@ -45,9 +46,9 @@ section {
 	display: block;
 	height: 100%;
 	width: 100%;
-	border: 2px solid #555;
+	border: 2px solid #ccc;
 	border-radius: 5px;
-	background: #2a2a2a;
+	background: #333;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	-o-backface-visibility: hidden;
@@ -67,19 +68,34 @@ ul {
 }
 li {
 	margin: 0;
-	padding: 4px 8px;
-	border-bottom: 1px solid #555;
+	padding: 5px 10px;
+	border-bottom: 1px solid #444;
 }
 li:last-child {
 	border-bottom: 0;
 }
 
-li span:first-child {
-	padding-right: 15px;
-}
-li span:nth-child(2) {
-	font-weight: bold;
-}
 li span:last-child {
-	color: #888;
+	float: right;
+	font-size: 14px;
+	font-weight: bold;
+	letter-spacing: 2px;
+	margin: 1px 5px 0 0;
+	color:  #eee;
+	text-shadow: 1px 1px #000;
+}
+
+li span.almost-full {
+	color: #666;
+}
+
+li span.subscriber {
+	font-size: 12px;
+	color: #333;
+	background: #505050;
+	border-radius: 3px;
+	text-shadow: none;
+	padding: 0 4px;
+	margin: 0;
+	letter-spacing: 0;
 }
