--- a/css/parkings.css
+++ b/css/parkings.css
@@ -11,6 +11,10 @@ section {
 	margin: 0;
 	padding: 0;
 }
+p {
+	margin: 0;
+	padding: 5px 10px;
+}
 
 #container {
 	position: relative;
@@ -54,7 +58,7 @@ section {
 	-o-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
-#card section:last-child {
+#card section:nth-child(2) {
 	-webkit-transform: rotateY(180deg);
 	-moz-transform: rotateY(180deg);
 	-o-transform: rotateY(180deg);
@@ -80,7 +84,7 @@ li span:last-child {
 	font-size: 14px;
 	font-weight: bold;
 	letter-spacing: 2px;
-	margin: 1px 5px 0 0;
+	margin: 1px 2px 0 0;
 	color:  #eee;
 	text-shadow: 1px 1px #000;
 }
