--- a/css/parkings.css
+++ b/css/parkings.css
@@ -1,10 +1,10 @@
 body {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-	font-size: 12px;
-	line-height: 15px;
-	color: #ccc;
+	font-size: 14px;
+	line-height: 16px;
+	color: #ddd;
 	background: #000;
-	margin: 20px;
+	margin: 10px;
 	padding: 0;
 }
 section {
@@ -15,12 +15,23 @@ p {
 	margin: 0;
 	padding: 5px 10px;
 }
+* {
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+h1 {
+	font-size: 24px;
+	line-height: 24px;
+	font-weight: bold;
+	margin: 0 0 10px 0;
+	padding: 0;
+}
 
 #container {
 	position: relative;
-	width: 300px;
-	height: 598px;
-	margin: 0 auto;
+	width: 100%;
+	height: 295px; /* FIXME */
+	margin: 0;
 	-webkit-perspective: 800px;
 	-moz-perspective: 800px;
 	-o-perspective: 800px;
@@ -69,23 +80,34 @@ ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
+	height: 100%;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-o-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 li {
 	margin: 0;
 	padding: 5px 10px;
-	border-bottom: 1px solid #444;
+	border-bottom: 1px solid #222;
+	border-top: 1px solid #444;
+}
+li:first-child {
+	border-top: 1px solid #333;
 }
 li:last-child {
-	border-bottom: 0;
+	border-bottom: 1px solid #333;
 }
 
 li span:last-child {
 	float: right;
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: bold;
 	letter-spacing: 2px;
-	margin: 1px 2px 0 0;
-	color:  #eee;
+	margin: 0;
+	color: #f0f0f0;
 	text-shadow: 1px 1px #000;
 }
 
